+ added some pictures to about-us.page; + added advantage block to about-us.page; + temporally added layout-helpers.less with class .horizontal-alignment to resolve problem with margins and alignment with header;

--- a/src/less/pages/about-us.page.less
+++ b/src/less/pages/about-us.page.less
@@ -1,5 +1,12 @@
 #aboutus {
 
+    .thesis {
+        color: @black;
+        font-size: 15px;
+        font-weight: 300;
+        margin-bottom: 30px;
+    }
+
     .heading-block {
         max-height: 1030px;
         padding-bottom: 0;
@@ -23,6 +30,38 @@
 
         @media @xsscreen {
             padding-bottom: 55px;
+        }
+
+        .heading-about {
+            background-color: @white;
+            overflow: hidden;
+            max-height: 590px;
+
+            .theses-wrapper {
+                width: 52%;
+                padding: 40px 65px;
+
+                :last-child {
+                    margin-bottom: 0;
+                }
+
+                @media (max-width: @desktop-hd-point) {
+                    padding: 30px 60px;
+                }
+
+                @media @mdscreen {
+                    padding: 15px 60px;
+                    width: 55%;
+
+                    :first-child {
+                        margin-bottom: 0;
+                    }
+                }
+
+                @media @lsmscreen {
+                    padding: 10px 40px;
+                }
+            }
         }
     }
 
@@ -58,62 +97,164 @@
         }
     }
 
-    .thesis {
-        color: @black;
-        font-size: 15px;
-        font-weight: 300;
-        margin-bottom: 30px;
+    .hidden-theses{
+        display: none;
+
+        @media (max-width: @desktop-hd-point) {
+            display: block;
+            margin-bottom: 60px;
+        }
+
+        @media @lsmscreen {
+            margin-bottom: 30px;
+        }
+
+        @media @xsscreen {
+            margin-bottom: 0;
+
+        }
     }
 
-    .heading-about {
-        background-color: @white;
-        overflow: hidden;
-        max-height: 590px;
+    .advantages {
+        margin-bottom: 70px;
 
-        .theses-wrapper {
-            width: 52%;
-            padding: 40px 65px;
+        @media @mdscreen {
 
-            :last-child {
-                margin-bottom: 0;
-            }
+                .list-unstyled {
+                    li:first-child {
+                        .advantage-picture-wrapper {
+                            background-image: url('../../assets/images/pages/about-us/advantage1-md.png');
+                        }
+                    }
 
-            @media (max-width: @desktop-hd-point) {
-                padding: 30px 60px;
+                    li:not(:first-child):not(:last-child) {
+                        .advantage-picture-wrapper {
+                            background-image: url('../../assets/images/pages/about-us/advantage2-md.png');
+                        }
+                    }
 
-                .two {
-                    display: none;
+                    li:last-child {
+                        .advantage-picture-wrapper {
+                            background-image: url('../../assets/images/pages/about-us/advantage3-md.png')
+                        }
+                    }
+                }
+        }
+
+        .advantage {
+
+            .advantage-picture-wrapper {
+                height: 260px;
+                text-align: center;
+                overflow: hidden;
+
+                .advantage-picture {
+                    height: 100%;
+                    max-width: 100%;
+                }
+
+                @media @mdscreen {
+                    background-size: 100% auto;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    height: 280px;
+                    margin-bottom: 60px;
+
+                    .advantage-picture {
+                        display: none;
+                    }
+                }
+
+                @media @lsmscreen {
+                    height: 220px;
+                    margin-bottom: 40px;
+                }
+
+                @media @xsscreen {
+                    height: 200px;
+                    margin-bottom: 30px;
+                }
+
+                @media @xxsscreen {
+                    height: 150px;
+                    margin-bottom: 15px;
                 }
             }
 
-            @media @mdscreen {
-                padding: 15px 60px;
-                width: 55%;
+            .advantage-description {
+                padding: 30px 40px 44px 25px;
+                background-color: @white;
+                position: relative;
 
-                .one {
-                    margin-bottom: 0;
+                .advantage-headline {
+                    font-size: 24px;
+                    line-height: 1.3;
+                    color: @black;
+                    padding-bottom: 20px;
+                    strong {
+                        font-weight: 600;
+                    }
                 }
 
-                .three {
-                    display: none;
+                .description {
+                    position: relative;
+                    font-size: 15px;
+                    max-height: 300px;
+                    overflow: hidden;
                 }
-            }
 
-            @media @lsmscreen {
-                padding: 10px 40px;
+                @media (max-width: @desktop-hd-point) {
 
-            }
+                    min-height: 532px;
 
-            @media @xsscreen {
-                display: none;
-                .one {
-                    display: none;
+                    .description {
+                        max-height: 330px;
+                        height: 330px;
+                        position: absolute;
+                        bottom: 20px;
+                        width: 225px;
+                    }
+                }
+
+                @media @mdscreen {
+                    min-height: auto;
+
+                    .description {
+                        max-height: none;
+                        height: auto;
+                        position: relative;
+                        bottom: 0;
+                        width: auto;
+                    }
+                }
+
+                @media @lsmscreen {
+                    padding: 10px 30px 30px;
+                    margin: 0 60px 60px;
+                }
+
+                @media @lsmscreen {
+                    padding: 10px 5px 30px;
+                    margin: 0 0 30px 0;
                 }
             }
         }
     }
 
-    .hidden-theses {
+    .team-leaders {
+        .col-12 {
+            background-color: deeppink;
+            //max-height: 450px;
 
+            .horizontal {
+                background-color: deepskyblue;
+                height: 50px;
+            }
+
+            .vertical {
+                background-color: cadetblue;
+                height: 100px;
+            }
+        }
     }
 }
